Pratique du design system - typographies & couleurs

--- a/maquette/design-system.html
+++ b/maquette/design-system.html
@@ -9,10 +9,10 @@
 </head>
 <body class="bg-dark">
     
-<div class="container ">
+<div class="container">
     <h1>Design System</h1>
 
-    <div class="bg-accent text-dark" style="padding: 1rem">
+    <div class="bg-accent-20 text-dark" style="padding: 1rem">
         light blue bg, with dark text
     </div>
 
@@ -20,7 +20,7 @@
         white bgn with dark text
     </div>
 
-    <div class="bg-light text-white" style="padding: 1rem">
+    <div class="bg-dark text-white" style="padding: 1rem">
        light blue bg with a 20% alpha and white text
     </div>
     
