Pratique du design system - typographies et espacements

--- a/maquette/design-system2.html
+++ b/maquette/design-system2.html
@@ -16,7 +16,7 @@
     <h1>Design System</h1>
 
   <section id="colors">
-    <h2><span>01</span> Colors</h2>
+    <h2 class="numbered-title"><span>01</span> Colors</h2>
     <div class="flex">
         <div style="flex-grow: 1;">
             <div class="bg-dark text-white"  style="padding: 3rem 1rem 1rem; border:1px solid white;">
@@ -44,9 +44,9 @@
 
 
   <section id="typography"  style="margin: 4rem 0">
-    <h2><span>02 </span>Typography</h2>
+    <h2 class="numbered-title"><span>02 </span>Typography</h2>
     <div class="flex">
-        <div style="flex-basis: 100%">
+        <div class="flow" style="flex-basis: 100%">
             <div> 
                 <p class="text-accent">Heading 1 - Bellefair Regular - 150px</p>
                 <p class="fs-900 ff-serif uppercase">Earth</p>
@@ -70,7 +70,7 @@
         
         </div>
         
-        <div  style="flex-basis: 100%">
+        <div  class="flow" style="flex-basis: 100%">
             <div> 
                 <p class="text-accent">Subheading 1 - Bellefair Regular - 28px</p>
                 <p class="fs-500 ff-serif uppercase">384,400 km</p>
